# DFX-Hackathon

./: Cargo.toml  README.md  dfx.json
medsync_backend/: Cargo.toml
medsync_frontend/: front.js  index.html
